@@ -50,10 +50,10 @@ var DimpBase = {
     // searchbar_time,
     // searchbar_time_mins,
     // splitbar,
-    // showunsub,
     // sort_init,
     // template,
     // uid,
+    // unsub,
     // view,
     // viewport,
     // viewswitch,
@@ -3051,7 +3051,7 @@ var DimpBase = {
                             password: Base64.encode($F(h.down('INPUT[name="remote_password"]'))),
                             password_base64: true,
                             remoteid: $F(h.down('INPUT[name="remote_id"]')),
-                            unsub: ~~(!!this.showunsub)
+                            unsub: this.showUnsub()
                         }, {
                             callback: function(r) {
                                 if (r.success) {
@@ -3260,7 +3260,7 @@ var DimpBase = {
 
         if (r.c) {
             r.c.each(function(m) {
-                if (!this.showunsub && m.un) {
+                if (m.un && !this.showUnsub()) {
                     this.flist.deleteMbox(m.m);
                     this.viewport.deleteView(m.m);
                 } else {
@@ -3536,7 +3536,7 @@ var DimpBase = {
         var m;
 
         params = params || {};
-        params.unsub = ~~(!!this.showunsub);
+        params.unsub = this.showUnsub();
         if (!Object.isArray(params.mboxes)) {
             params.mboxes = [ params.mboxes ];
         }
@@ -3559,7 +3559,7 @@ var DimpBase = {
             new Drop(e.memo.element(), this.mboxDropConfig);
         }
 
-        if (this.showunsub && e.memo.unsubscribed()) {
+        if (DimpCore.conf.subscribe && e.memo.unsubscribed()) {
             e.memo.element().addClassName('imp-sidebar-unsubmbox');
         }
 
@@ -3607,9 +3607,14 @@ var DimpBase = {
 
     toggleSubscribed: function()
     {
-        this.showunsub = !this.showunsub;
+        this.unsub = !this.unsub;
         $('ctx_folderopts_sub', 'ctx_folderopts_unsub').invoke('toggle');
         this._reloadFolders();
+    },
+
+    showUnsub: function()
+    {
+        return (!DimpCore.conf.subscribe || ~~(!!this.unsub));
     },
 
     _reloadFolders: function()
