@@ -24,6 +24,8 @@ v6.3.0-git
 v6.2.3
 ------
 
+[mms] Fix some folder display issues when not using IMAP subscriptions in
+      dynamic view (Bug #13553).
 [mms] Fix accessing dynamic compose page when file uploads are not available
       (Bug #13580).
 [mms] Fix saving unique browser preferences for a specific backend in dynamic
